[package]
name = "tkrzw-sys"
version = "0.1.0"
authors = ["Vee Satayamas <vee.sa@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tkrzw_sys"

[dependencies]
q

[build-dependencies]
bindgen = "0.53"
pkg-config = "0.3"
